Added "Attention" song info & made style changes.

--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,41 @@
-body {
-    background-image: url("./resources/doja.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: black;
+img {
+    float: left;
+    border: 3px solid white;
+    margin-top: 0px;
+    width: 22%;
+    margin-left: 400px;
 }
 
-h1 {
-    color: red;
-    font-size: 200px;
-    text-align: center;
+iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
 }
 
-h3 {
-    color: red;
-    font-size: 100px;
+p {
+    color: lightsalmon;
+    text-align: left;
+    font-size: 120%;
+    float: right;
+}
+
+nav {
+    background-color: darkred;
 }
 
 footer {
-    text-align: right;
-    padding-top: 250px;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    text-align: left;
+}
+
+.container {
+    margin: 50px 900px;
+    width: 650px;
 }
 
 .center {
@@ -26,14 +43,29 @@ footer {
 }
 
 .main {
+    color: red;
+    font-size: 200px;
+    text-align: center;
     padding-top: 15%;
     letter-spacing: 75px;
+}
+
+.secondary {
+    color: red;
+    font-size: 100px;
 }
 
 .main, .secondary {
     line-height: 30px;
     -webkit-text-stroke-width: 3px;
     -webkit-text-stroke-color: darkred;
+}
+
+.home {
+    background-image: url("./resources/doja.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: black;
 }
 
 .navi {
@@ -50,4 +82,29 @@ footer {
     padding-left: 10px;
     padding-right: 10px;
     font-size:125%;
+}
+
+.song {
+    background-color: black;
+}
+
+.song-title {
+    color: darkred;
+    font-size: 75px;
+    text-align: center;
+    letter-spacing: 75px;
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: red;
+}
+
+.return {
+    text-decoration: none;
+    color: lightsalmon;
+    font-size: 150%;
+    letter-spacing: 15px;
+}
+
+.info {
+    text-align: left;
+    margin-left: 150px;
 }
